syntax = "proto3";

package auth;

option go_package = ".;authpb";

// gRPC-сервис для работы с аутентификацией и JWT
service AuthService {
  // Middleware
  rpc IsAuth(IsAuthRequest) returns (IsAuthResponse);
}

// middleware
message IsAuthRequest {
  string JWT = 1;
  string username = 2;
}
message IsAuthResponse { bool status = 1; }
